[package]
name = "ghdstats"
version = "1.3.0"
edition = "2024"

[profile.release]
strip = true
lto = true
panic = "abort"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
rayon = "1.11.0"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
